welcome.lessons.welcome.bat.bool2.AnswerCell.scala.error
answerCell:9: error: ')' expected but 'return' found.
  return true
  ^